--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dammaku",
+  "name": "react-danmaku",
   "version": "0.0.1",
   "description": "a comment curtain for React",
   "main": "index.js",
